# auth_thesis_fhe_si

./: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  UServer.cpp  UServer.h  client.cpp  datagenerator.py  helpfunctions.cpp  helpfunctions.h  main.cpp  main1.cpp  main10.cpp  main11.cpp  main2.cpp  old_code  server.cpp  test.txt
old/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
